Fixed a sidebar menu layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -868,7 +868,7 @@ object {
 }
 
 .vertical-menu ul ul ul {
-	left: -0.5em;
+	left: -0.25em;
 	top: 100%;
 }
 
@@ -1837,6 +1837,10 @@ textarea#comment {
 
 .footer-menu ul ul ul {
 	top: auto;
+}
+
+.vertical-menu ul ul ul {
+	left: -0.5em;
 }
 }
 
